# asusctl

./: .gitignore  CHANGELOG.md  Cargo.toml  GPU_MODE_SWITCHING_SUMMARY.md  Makefile  PACKAGING.md  README.md
.github/workflows/: release.yml
asus-shutdown/: Cargo.toml
asus-shutdown/src/: main.rs
asusctl/: Cargo.toml
asusctl/examples/: anime-test-patterns.rs  dump-g635l-fixture.rs
asusctl/src/: cli_opts.rs  main.rs  slash_cli.rs  xgm_led_cli.rs
asusd/: Cargo.toml
asusd-user/: Cargo.toml
asusd-user/src/: ctrl_anime.rs  daemon.rs  error.rs
asusd/src/: asus_armoury.rs  aura_manager.rs  config.rs  ctrl_backlight.rs  ctrl_fancurves.rs  ctrl_gpu.rs  ctrl_platform.rs  ctrl_xgm_led.rs  daemon.rs  error.rs  lib.rs
asusd/src/aura_anime/: trait_impls.rs
asusd/src/aura_laptop/: config.rs  mod.rs
data/: asus-shutdown.service  asusd-user.service  asusd.rules  asusd.service
distro-packaging/: PKGBUILD  asusctl.spec
rog-anime/: Cargo.toml
rog-anime/src/: data.rs  diagonal.rs  error.rs  image.rs  usb.rs
rog-anime/tests/: g635l.rs  g835l.rs
rog-aura/: Cargo.toml
rog-aura/data/: aura_support.ron
rog-aura/data/layouts/: g614pr-per-key_US.ron
rog-aura/src/: error.rs  lib.rs
rog-aura/src/effects/: base.rs  breathe.rs  doom.rs  mod.rs  static_.rs
rog-aura/src/keyboard/: advanced.rs  power.rs
rog-control-center/: Cargo.toml
rog-control-center/data/: org.opengamingcollective.rog-control-center.metainfo.xml
rog-control-center/src/: cli_options.rs  config.rs  error.rs  lib.rs  main.rs  mocking.rs  notify.rs  shortcuts.rs  tray.rs  window.rs  zbus_proxies.rs
rog-control-center/src/ui/: mod.rs  setup_aura.rs  setup_gpu.rs  setup_slash.rs  setup_system.rs
rog-control-center/tests/: gpu_power_tests.rs
rog-control-center/translations/az/: rog-control-center.po
rog-control-center/translations/az/LC_MESSAGES/: rog-control-center.mo
rog-control-center/translations/en/: rog-control-center.po
rog-control-center/translations/en/LC_MESSAGES/: rog-control-center.mo
rog-control-center/translations/fr/: rog-control-center.po
rog-control-center/translations/fr/LC_MESSAGES/: rog-control-center.mo
rog-control-center/translations/it/: rog-control-center.po
rog-control-center/translations/it/LC_MESSAGES/: rog-control-center.mo
rog-control-center/translations/pt_BR/: rog-control-center.po
rog-control-center/translations/pt_BR/LC_MESSAGES/: rog-control-center.mo
rog-control-center/translations/ru/: rog-control-center.po
rog-control-center/translations/ru/LC_MESSAGES/: rog-control-center.mo
rog-control-center/translations/tr/: rog-control-center.po
rog-control-center/translations/tr/LC_MESSAGES/: rog-control-center.mo
rog-control-center/translations/uk_UA/: rog-control-center.po
rog-control-center/translations/uk_UA/LC_MESSAGES/: rog-control-center.mo
rog-control-center/translations/zh_CN/: rog-control-center.po
rog-control-center/translations/zh_CN/LC_MESSAGES/: rog-control-center.mo
rog-control-center/ui/: main_window.slint
rog-control-center/ui/pages/: about.slint  app_settings.slint  battery.slint  gpu.slint  slash.slint  system.slint
rog-control-center/ui/widgets/: common.slint
rog-dbus/src/: asus_armoury.rs  lib.rs  zbus_fan_curves.rs  zbus_platform.rs  zbus_xgm_led.rs
rog-platform/: Cargo.toml
rog-platform/src/: asus_armoury.rs  cled.rs  cpu.rs  error.rs  gpu_pci.rs  lib.rs  platform.rs  power.rs
rog-platform/tests/: gpu_pci_tests.rs
rog-profiles/: Cargo.toml
rog-profiles/src/: error.rs
rog-scsi/: Cargo.toml
rog-scsi/src/: error.rs
rog-slash/: Cargo.toml
rog-slash/src/: data.rs  error.rs  usb.rs
simulators/: Cargo.toml
