[workspace.package]
version = "6.3.9"
rust-version = "1.82"
license = "MPL-2.0"
readme = "README.md"
authors = [
  "Luke <luke@ljones.dev>",
  "Denis Benato <benato.denis96@gmail.com>"
]
repository = "https://github.com/OpenGamingCollective/asusctl"
homepage = "https://github.com/OpenGamingCollective/asusctl"
description = "Laptop feature control for ASUS ROG laptops and others"
edition = "2021"

[workspace]
resolver = "2"
members = [
  "asusctl",
  "asusd",
  "asus-shutdown",
  "asusd-user",
  "config-traits",
  "dmi-id",
  "rog-platform",
  "rog-dbus",
  "rog-anime",
  "rog-aura",
  "rog-profiles",
  "rog-control-center",
  "rog-slash",
  "simulators",
  "rog-scsi",
]

default-members = ["asusctl", "asusd", "asus-shutdown", "asusd-user", "rog-control-center"]

[workspace.dependencies]
tokio = { version = "^1.39.0", default-features = false, features = [
  "macros",
  "sync",
  "time",
  "rt",
  "rt-multi-thread",
] }
concat-idents = "^1.1"
dirs = "^4.0"
mio = "^0.8.11"

futures-util = "^0.3.31"
zbus = "^5.13.1"
logind-zbus = { version = "^5.2.0" }

serde = { version = "^1.0", features = ["serde_derive"] }
serde_json = "^1.0"
ron = "*"

log = "^0.4"
env_logger = "^0.10.0"
thiserror = "^2"

glam = { version = "^0.22", features = ["serde"] }
gumdrop = "^0.8"
udev = { version = "^0.8", features = ["mio"] }
rusb = "^0.9"
inotify = "^0.10"

png_pong = "^0.8"
pix = "^0.13"
gif = "^0.12"

notify-rust = { version = "^4.11.5", features = ["z", "async"] }
ksni = { version = "^0.3", default-features = false, features = ["async-io"] }
image = "^0.25.5"
png = "^0.17"
slint = { version = "^1.17.1", features = ["gettext"] }
slint-build = "^1.17.1"
argh = "^0.1"
uhid-virt = "^0.0.8"
sdl2 = { version = "^0.37", default-features = false }

sg = { git = "https://github.com/flukejones/sg-rs.git" }

[profile.release]
lto = "fat"
debug = false
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 1

[workspace.dependencies.cargo-husky]
version = "^1"
default-features = false
features = ["user-hooks"]
