[package]
name = "asusd-user"
license.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[[bin]]
name = "asusd-user"
path = "src/daemon.rs"

[features]
default = []
local_data = []

[dependencies]
dirs.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

# serialisation
serde.workspace = true
ron.workspace = true

rog_anime = { path = "../rog-anime" }
rog_aura = { path = "../rog-aura" }
rog_dbus = { path = "../rog-dbus" }
rog_platform = { path = "../rog-platform" }
config-traits = { path = "../config-traits" }

zbus.workspace = true
log.workspace = true
env_logger.workspace = true
thiserror.workspace = true

[package.metadata.deb]
license-file = ["../LICENSE", "4"]
extended-description = """\
An user utility for Linux to control fancy things on various ASUS laptops
like keyboard effects or anime matrix animation cycles."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
  ["target/release/asusd-user", "usr/bin/", "755"],
  ["../asusd_user-fakeinstall/usr/lib/systemd/user/*", "usr/lib/systemd/user/", "644"],
]
