[package]
name = "rog-control-center"
license.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[features]
default = []
mocking = []
x11 = ["slint/backend-winit-x11"]
# Optional tokio debug feature does not require nightly; remove RUSTFLAGS note.
tokio-debug = ["console-subscriber"]
rog_ally = []

[dependencies]
console-subscriber = { version = "^0.4", optional = true }

ksni = { version = "0.3", default-features = false, features = ["async-io"] }
image = "0.25.5"

asusd = { path = "../asusd" }
config-traits = { path = "../config-traits" }
rog_anime = { path = "../rog-anime" }
rog_dbus = { path = "../rog-dbus" }
rog_aura = { path = "../rog-aura" }
rog_profiles = { path = "../rog-profiles" }
rog_platform = { path = "../rog-platform" }
rog_slash = { path = "../rog-slash" }
dmi_id = { path = "../dmi-id" }

gumdrop.workspace = true
log.workspace = true
env_logger.workspace = true

tokio.workspace = true
serde.workspace = true
zbus.workspace = true
dirs.workspace = true
notify-rust.workspace = true
concat-idents.workspace = true
futures-util.workspace = true
thiserror.workspace = true

[dependencies.slint]
git = "https://github.com/slint-ui/slint.git"
default-features = false
features = [
    "compat-1-2",
    "gettext",
    "backend-winit-wayland",
    "renderer-femtovg",
    # "renderer-skia-opengl",
]

[build-dependencies.slint-build]
git = "https://github.com/slint-ui/slint.git"

[package.metadata.deb]
license-file = ["../LICENSE", "4"]
extended-description = """\
The dbus server for asusctl and rog-control-center applications."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
  ["target/release/rog-control-center", "usr/bin/", "755"],
  ["../rog_gui-fakeinstall/usr/share/applications/*", "usr/share/share/applications/", "644"],
  ["../rog_gui-fakeinstall/usr/share/icons/hicolor/512x512/apps/*", "usr/share/icons/hicolor/512x512/apps", "644"],
  ["../rog_gui-fakeinstall/usr/share/icons/hicolor/scalable/status/*", "usr/share/icons/hicolor/scalable/status", "644"],
]
